# TetLib

./: CMakeLists.txt  README.md  generate_meshes.sh  plot_mesh_quality.py
data/: sphere.off
notebooks/: 002_heatdiffusion_gradients.ipynb  cell_metrics_n_orbitpoints.ipynb  heat_diffusion_evaluation.ipynb  heat_diffusion_flips.ipynb  metrics_ifo_flips.ipynb  utils.py
src/: CGALMeshPolyhedron.hpp  CGALMeshPolyhedron_impl.h  CGALPolyhedron.hpp  CGALPolyhedron_impl.h  CGALTriangulation.cpp  CGALTriangulation.hpp  CGALTriangulation_impl.hpp  IndexedTetMesh.cpp  IndexedTetMesh.hpp  IndexedTetMesh_impl.h  SolveConstrained.cpp  SolveConstrained.hpp  TetgenMeshPolyhedron.hpp  TetgenMeshPolyhedron_impl.h  Timer.cpp  Timer.hpp  VectorOperations.h  main.cpp  mesh_generation.cpp  mesh_viewer.cpp  playground.cpp  tet_experiment.cpp
